# invrs_reinf_learning

./: ALGORITHM.md  IRL_IMPLEMENTATION.md  README.md  STUDENT4_REPORT.md  comparison_results.pth  deep_feature_extractor.py  deep_irl_algorithms.py  deep_maxent_irl_model.pth  demo_deep_irl.py  demo_irl.py  demo_maxent_irl.py  environment.py  experiments.py  experiments_final.py  irl_algorithms.py  main.py  performance_test.py  plot.py  policy_training.py  pyproject.toml  run.py  testgt.py
.claude/: settings.local.json
checkpoint/: ablation_final.pkl
